@@ -1855,3 +1855,4 @@ Version		Change Log
 	Bug fixes to SUSSelection.  Thanks to Uday Kamath <kamathuday@gmail.com>
 	Updated MersenneTwister and MersenneTwisterFast to allow full-open, half-open
 		(both directions) and fully-closed intervals for nextDouble and nextFloat
+	Updated Benchmarks and Regression to generate points from fully-closed intervals
